through first pass

--- a/skinny_vitivisor_dash.ipynb
+++ b/skinny_vitivisor_dash.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## skinny prediction and advisory dashboard"
+    "# skinny prediction and advisory dashboard"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `MyVineyard` (vineyard properties including `grape variety`, `soil type`, `rootstock type`, `...`,  and also variables that will affecct management intervention such as `canopy structure` or `vine width`); \n",
+    "\n",
+    "### `MyManagement` (management related variables such as `entitlement`, `water delivery service`, `...`)"
    ]
   },
   {
@@ -36,18 +45,29 @@
     "irrig_scen = [\"low\", \"high\"]\n",
     "irrig_str = ipyw.Text(\"0.5\")\n",
     "str_d = {\"irrigation\": irrig_str}\n",
+    "plot_types = [\"irrigationtimeseries\", \"irrigationcost\", \"harvestyield\", \"harvestrevenue\",\n",
+    "              \"laitimeseries\", \"costcontributions\", \"grossmargin\"]\n",
+    "plot_str = ipyw.Text(\"0.5\")\n",
+    "p_d = {\"plot\": plot_str}\n",
     "\n",
     "def set_irrig(**kwargs):\n",
     "    for k, v in kwargs.items():\n",
     "        str_d[k].value = str(v)\n",
     "        \n",
+    "def set_plot_type(**kwargs):\n",
+    "    for k, v in kwargs.items():\n",
+    "        p_d[k].value = str(v)\n",
+    "        \n",
     "w = ipyw.interactive(set_irrig, irrigation=irrig_scen)\n",
+    "p = ipyw.interactive(set_plot_type, plot=plot_types)\n",
     "\n",
     "def on_button_clicked(b):\n",
     "    irrig = str_d['irrigation'].value\n",
-    "    print(\"evaluating {}...\".format(irrig))\n",
+    "    print(\"evaluating {} irrigation scenario with respect to base scenario...\".format(irrig))\n",
     "    scens = mjknowling.run_scen(irrig)\n",
-    "    mjknowling.plot_scen(scens)\n",
+    "    plot = p_d['plot'].value\n",
+    "    print(\"plotting {}\".format(plot))\n",
+    "    mjknowling.plot_scen(scens, plot)\n",
     "    \n",
     "button = ipyw.Button(description=\"Get Some Science\")\n",
     "button.on_click(on_button_clicked)"
@@ -59,19 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#r = ipyw.interact(set_risk,risk=(0.01,0.99,0.01))\n",
     "display(w)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "display(button)"
    ]
   },
   {
@@ -79,7 +87,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "display(p)  # or just streams to reduce model calls?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "display(button)"
+   ]
   },
   {
    "cell_type": "code",
