--- a/skinny_vitivisor_dash.ipynb
+++ b/skinny_vitivisor_dash.ipynb
@@ -41,6 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%matplotlib inline\n",
     "# widgets\n",
     "irrig_scen = [\"low\", \"high\"]\n",
     "irrig_str = ipyw.Text(\"0.5\")\n",
