--- a/skinny_vitivisor_dash.ipynb
+++ b/skinny_vitivisor_dash.ipynb
@@ -12,6 +12,7 @@
     "from __future__ import print_function\n",
     "import os\n",
     "import ipywidgets as ipyw\n",
+    "from ipywidgets import Dropdown, FloatText, IntSlider, Label, HBox, VBox\n",
     "import matplotlib as mpl\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -25,14 +26,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## MyVineyard"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## MyManagementScenarios"
+    "### MyVineyard"
    ]
   },
   {
@@ -42,6 +36,30 @@
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
+    "variety_d = {'variety': ['shiraz']}\n",
+    "variety_widget = Dropdown( options=variety_d['variety'],\n",
+    "                         value='shiraz',\n",
+    "                         description='variety',\n",
+    "                       )\n",
+    "rootstock_d = {'rootstock': ['Schwartzmann']}\n",
+    "rootstock_widget = Dropdown( options=rootstock_d['rootstock'],\n",
+    "                         value='Schwartzmann',\n",
+    "                         description='rootstock',\n",
+    "                       )\n",
+    "#style = {'description_width': 'initial'}\n",
+    "#entitl_widget = FloatText( value=10.0, step=1, )#description='entitlement (ML)', style=style)\n",
+    "#entitl_widget = HBox([Label('entitl. (ML)'), entitl_widget])\n",
+    "left_box = VBox([variety_widget, ])#entitl_widget])\n",
+    "right_box = VBox([rootstock_widget])\n",
+    "HBox([left_box, right_box])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "irrig_scen = [\"low\", \"high\"]\n",
     "irrig_str = ipyw.Text(\"0.5\")\n",
     "str_d = {\"irrigation\": irrig_str}\n",
@@ -57,7 +75,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## MyAssessment"
+    "### MyManagementScenarios"
    ]
   },
   {
@@ -66,15 +84,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_types = [\"irrigationtimeseries\", \"irrigationcost\", \"harvestyield\", \"harvestrevenue\",\n",
-    "              \"laitimeseries\", \"costcontributions\", \"grossmargin\"]\n",
-    "plot_str = ipyw.Text(\"0.5\")\n",
-    "p_d = {\"plot\": plot_str}\n",
-    "def set_plot_type(**kwargs):\n",
+    "irrig_scen = [\"low\", \"high\"]\n",
+    "irrig_str = ipyw.Text(\"0.5\")\n",
+    "str_d = {\"irrigation\": irrig_str}\n",
+    "def set_irrig(**kwargs):\n",
     "    for k, v in kwargs.items():\n",
-    "        p_d[k].value = str(v)\n",
-    "p = ipyw.interactive(set_plot_type, plot=plot_types)\n",
-    "display(p)"
+    "        str_d[k].value = str(v)\n",
+    "w = ipyw.interactive(set_irrig, irrigation=irrig_scen)\n",
+    "#display(w)\n",
+    "str_d['irrigation'].value = 'low'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### MyAssessment"
    ]
   },
   {
@@ -83,38 +108,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from IPython.display import clear_output\n",
-    "def on_button_clicked(b):\n",
-    "    clear_output()\n",
-    "    display(button)\n",
-    "    irrig = str_d['irrigation'].value\n",
-    "    #print(\"evaluating {} irrigation scenario with respect to base scenario...\".format(irrig))\n",
-    "    scens = mjknowling.run_scen(irrig)\n",
-    "    plot = p_d['plot'].value\n",
-    "    #print(\"plotting {}\".format(plot))\n",
-    "    mjknowling.plot_scen(scens, plot)\n",
-    "    \n",
-    "button = ipyw.Button(description=\"Get Some Science\")\n",
-    "button.on_click(on_button_clicked)\n",
-    "display(button)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from ipywidgets import Dropdown\n",
-    "d0 = {'where my water is going' : ['irrigation', 'soil moisture', 'transpiration'], \n",
-    "      'how my vine is developing' : ['key dates', 'growth', 'end of season'], \n",
+    "d0 = {'how my vine is developing' : ['key dates', 'growth', 'end of season'], \n",
+    "      'where my water is going' : ['irrigation', 'soil moisture', 'transpiration'],\n",
     "      'what my financial position is': ['revenue', 'costs', 'bottom line']}\n",
     "d1 = {v: [] for v in [x for y in list(d0.values()) for x in y]}  # one level at a time - to avoid multi-index hassle\n",
     "d1['irrigation'] = ['time series', 'total']\n",
@@ -133,16 +128,16 @@
    "outputs": [],
    "source": [
     "level0_widget = Dropdown( options=list(d0.keys()),\n",
-    "                         value='where my water is going',\n",
-    "                         description=' ',\n",
+    "                         value='how my vine is developing',\n",
+    "                         description='',\n",
     "                       )\n",
-    "level1_widget = Dropdown( options=d0['where my water is going'],\n",
+    "level1_widget = Dropdown( options=d0['how my vine is developing'],\n",
     "                         value=None,\n",
-    "                         description=' ',\n",
+    "                         description='',\n",
     "                       )\n",
     "level2_widget = Dropdown( options=d0['where my water is going'],\n",
     "                         value=None,\n",
-    "                         description=' ',\n",
+    "                         description='',\n",
     "                       )"
    ]
   },
@@ -167,7 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"I want to know...\")\n",
+    "print('I want to know....')\n",
     "display(level0_widget)\n",
     "display(level1_widget)\n",
     "display(level2_widget)"
@@ -182,32 +177,26 @@
     "def plot_request_mapper():\n",
     "    plot_str = ipyw.Text(\"0.5\")\n",
     "    p_d = {\"plot\": plot_str}\n",
-    "    if level1_widget.value == \"irrigation\" and level2_widget.value == \"time series\":\n",
-    "        p_d['plot'].value = 'irrigationtimeseries'\n",
-    "    elif level1_widget.value == \"costs\" and level2_widget.value == \"irrigation\":\n",
-    "        p_d['plot'].value = 'irrigationcost'\n",
-    "    elif level1_widget.value == \"end of season\" and level2_widget.value == \"yield\":\n",
-    "        p_d['plot'].value = 'harvestyield'\n",
-    "    elif level1_widget.value == \"revenue\" and level2_widget.value == \"crush\":\n",
-    "        p_d['plot'].value = 'harvestrevenue'\n",
-    "    elif level1_widget.value == \"growth\" and level2_widget.value == \"canopy\":\n",
-    "        p_d['plot'].value = 'laitimeseries'\n",
-    "    elif level1_widget.value == \"costs\" and level2_widget.value == \"comparison\":\n",
-    "        p_d['plot'].value = 'costcontributions'\n",
-    "    elif level1_widget.value == \"bottom line\" and level2_widget.value == \"gross margin\":\n",
-    "        p_d['plot'].value = 'grossmargin'\n",
+    "    if level1_widget.value is not None and level2_widget is not None:\n",
+    "        if level1_widget.value == \"irrigation\" and level2_widget.value == \"time series\":\n",
+    "            p_d['plot'].value = 'irrigationtimeseries'\n",
+    "        elif level1_widget.value == \"costs\" and level2_widget.value == \"irrigation\":\n",
+    "            p_d['plot'].value = 'irrigationcost'\n",
+    "        elif level1_widget.value == \"end of season\" and level2_widget.value == \"yield\":\n",
+    "            p_d['plot'].value = 'harvestyield'\n",
+    "        elif level1_widget.value == \"revenue\" and level2_widget.value == \"crush\":\n",
+    "            p_d['plot'].value = 'harvestrevenue'\n",
+    "        elif level1_widget.value == \"growth\" and level2_widget.value == \"canopy\":\n",
+    "            p_d['plot'].value = 'laitimeseries'\n",
+    "        elif level1_widget.value == \"costs\" and level2_widget.value == \"comparison\":\n",
+    "            p_d['plot'].value = 'costcontributions'\n",
+    "        elif level1_widget.value == \"bottom line\" and level2_widget.value == \"gross margin\":\n",
+    "            p_d['plot'].value = 'grossmargin'\n",
+    "        else:\n",
+    "            p_d['plot'].value = 'underdev'\n",
     "    else:\n",
-    "        p_d['plot'].value = 'underdev'\n",
+    "        raise Exception(\"Please select an option from each of the drop-down menus!\")\n",
     "    return p_d"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "level0_widget.value, level1_widget.value, level2_widget.value"
    ]
   },
   {
