--- a/skinny_vitivisor_dash.ipynb
+++ b/skinny_vitivisor_dash.ipynb
@@ -55,23 +55,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "irrig_scen = [\"low\", \"high\"]\n",
-    "irrig_str = ipyw.Text(\"0.5\")\n",
-    "str_d = {\"irrigation\": irrig_str}\n",
-    "def set_irrig(**kwargs):\n",
-    "    for k, v in kwargs.items():\n",
-    "        str_d[k].value = str(v)\n",
-    "w = ipyw.interactive(set_irrig, irrigation=irrig_scen)\n",
-    "#display(w)\n",
-    "str_d['irrigation'].value = 'low'"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -93,6 +76,109 @@
     "w = ipyw.interactive(set_irrig, irrigation=irrig_scen)\n",
     "#display(w)\n",
     "str_d['irrigation'].value = 'low'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s0 = {'irrigation strategies': ['soil moisture deficit based'], \n",
+    "      'canopy management strategies': ['under dev']}\n",
+    "s1 = {v: [] for v in [x for y in list(s0.values()) for x in y]}  # one level at a time - to avoid multi-index hassle\n",
+    "s1['soil moisture deficit based'] = ['simple', 'detailed']\n",
+    "s1['under dev'] = ['under dev']\n",
+    "s1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "slevel0_widget = Dropdown( options=list(s0.keys()),\n",
+    "                         value='irrigation strategies',\n",
+    "                         description='',\n",
+    "                       )\n",
+    "slevel1_widget = Dropdown( options=s0['irrigation strategies'],\n",
+    "                         value=None,\n",
+    "                         description='',\n",
+    "                       )\n",
+    "slevel2_widget = Dropdown( options=s0['irrigation strategies'],\n",
+    "                         value=None,\n",
+    "                         description='',\n",
+    "                       )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def on_update_widget_slevel0(*args):\n",
+    "    slevel1_widget.options = s0[slevel0_widget.value]\n",
+    "slevel0_widget.observe(on_update_widget_slevel0, 'value')\n",
+    "\n",
+    "def on_update_widget_slevel1(*args):\n",
+    "    slevel2_widget.options = s1[slevel1_widget.value]\n",
+    "slevel1_widget.observe(on_update_widget_slevel1, 'value')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('Scenario generator...')\n",
+    "print(\"I want to explore...\")\n",
+    "l_box, c_box, r_box = VBox([slevel0_widget]), VBox([slevel1_widget]), VBox([slevel2_widget])\n",
+    "HBox([l_box, c_box, r_box])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# scenario selector\n",
+    "print('ScenarioSelector...')\n",
+    "#print('Scenarios found...')\n",
+    "base_scen_chk = ipyw.Checkbox(value=True, description='base', disabled=False, indent=False)\n",
+    "low_scen_chk = ipyw.Checkbox(value=False, description='low', disabled=False, indent=False)\n",
+    "high_scen_chk = ipyw.Checkbox(value=False, description='high', disabled=False, indent=False)\n",
+    "l_box, c_box, r_box = VBox([base_scen_chk]), VBox([low_scen_chk]), VBox([high_scen_chk])\n",
+    "HBox([l_box, c_box, r_box])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# loop programmatically over found\n",
+    "scenarios = []\n",
+    "if base_scen_chk.value:\n",
+    "    scenarios.append('base')\n",
+    "if low_scen_chk.value:\n",
+    "    scenarios.append('low')\n",
+    "if high_scen_chk.value:\n",
+    "    scenarios.append('high')\n",
+    "scenarios"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('Scenario labeler and saver (and model runner) here...')"
    ]
   },
   {
@@ -132,11 +218,11 @@
     "                         description='',\n",
     "                       )\n",
     "level1_widget = Dropdown( options=d0['how my vine is developing'],\n",
-    "                         value=None,\n",
+    "                         value='key dates',\n",
     "                         description='',\n",
     "                       )\n",
-    "level2_widget = Dropdown( options=d0['where my water is going'],\n",
-    "                         value=None,\n",
+    "level2_widget = Dropdown( options=d0['how my vine is developing'],\n",
+    "                         value='bud burst',\n",
     "                         description='',\n",
     "                       )"
    ]
@@ -163,9 +249,8 @@
    "outputs": [],
    "source": [
     "print('I want to know....')\n",
-    "display(level0_widget)\n",
-    "display(level1_widget)\n",
-    "display(level2_widget)"
+    "l_box, c_box, r_box = VBox([level0_widget]), VBox([level1_widget]), VBox([level2_widget])\n",
+    "HBox([l_box, c_box, r_box])"
    ]
   },
   {
@@ -211,30 +296,16 @@
     "    display(button)\n",
     "    irrig = str_d['irrigation'].value\n",
     "    #print(\"evaluating {} irrigation scenario with respect to base scenario...\".format(irrig))\n",
-    "    scens = mjknowling.run_scen(irrig)  # not wrt baseline\n",
+    "    scens = mjknowling.run_scen(irrig)\n",
     "    p_d = plot_request_mapper()\n",
     "    plot = p_d['plot'].value\n",
-    "    #print(\"plotting {}\".format(plot))\n",
+    "    print(\"plotting {}\".format(plot))\n",
     "    mjknowling.plot_scen(scens, plot)\n",
     "    \n",
     "button = ipyw.Button(description=\"Get Some Science\")\n",
     "button.on_click(on_button_clicked)\n",
     "display(button)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
