--- a/skinny_vitivisor_dash.ipynb
+++ b/skinny_vitivisor_dash.ipynb
@@ -88,8 +88,7 @@
     "      'canopy management strategies': ['under dev']}\n",
     "s1 = {v: [] for v in [x for y in list(s0.values()) for x in y]}  # one level at a time - to avoid multi-index hassle\n",
     "s1['soil moisture deficit based'] = ['simple', 'detailed']\n",
-    "s1['under dev'] = ['under dev']\n",
-    "s1"
+    "s1['under dev'] = ['under dev']"
    ]
   },
   {
@@ -168,8 +167,7 @@
     "if low_scen_chk.value:\n",
     "    scenarios.append('low')\n",
     "if high_scen_chk.value:\n",
-    "    scenarios.append('high')\n",
-    "scenarios"
+    "    scenarios.append('high')"
    ]
   },
   {
@@ -178,7 +176,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('Scenario labeler and saver (and model runner) here...')"
+    "#print('Scenario labeler and saver (and model runner) here...')"
    ]
   },
   {
@@ -218,11 +216,11 @@
     "                         description='',\n",
     "                       )\n",
     "level1_widget = Dropdown( options=d0['how my vine is developing'],\n",
-    "                         value='key dates',\n",
+    "                         value=None,\n",
     "                         description='',\n",
     "                       )\n",
     "level2_widget = Dropdown( options=d0['how my vine is developing'],\n",
-    "                         value='bud burst',\n",
+    "                         value=None,\n",
     "                         description='',\n",
     "                       )"
    ]
@@ -299,7 +297,7 @@
     "    scens = mjknowling.run_scen(irrig)\n",
     "    p_d = plot_request_mapper()\n",
     "    plot = p_d['plot'].value\n",
-    "    print(\"plotting {}\".format(plot))\n",
+    "    #print(\"plotting {}\".format(plot))\n",
     "    mjknowling.plot_scen(scens, plot)\n",
     "    \n",
     "button = ipyw.Button(description=\"Get Some Science\")\n",
