--- a/skinny_vitivisor_dash.ipynb
+++ b/skinny_vitivisor_dash.ipynb
@@ -132,6 +132,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from IPython.display import clear_output\n",
+    "def updates():\n",
+    "    clear_output()\n",
+    "    #display(button)\n",
+    "    \n",
+    "    #l_box, c_box, r_box = VBox([level0_widget]), VBox([level1_widget]), VBox([level2_widget])\n",
+    "    #display(HBox([l_box, c_box, r_box]))\n",
+    "    \n",
+    "    irrig = str_d['irrigation'].value\n",
+    "    #print(\"evaluating {} irrigation scenario with respect to base scenario...\".format(irrig))\n",
+    "    scens = mjknowling.run_scen(irrig)\n",
+    "    p_d = plot_request_mapper()\n",
+    "    plot = p_d['plot'].value\n",
+    "    #print(\"plotting {}\".format(plot))\n",
+    "    mjknowling.plot_scen(scens, plot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "d0 = {'how my vine is developing' : ['key dates', 'growth', 'end of season'], \n",
     "      'where my water is going' : ['irrigation', 'soil moisture', 'transpiration'],\n",
     "      'what my financial position is': ['revenue', 'costs', 'bottom line']}\n",
@@ -162,15 +185,8 @@
     "level2_widget = Dropdown( options=d0['how my vine is developing'],\n",
     "                         value=None,\n",
     "                         description='',\n",
-    "                       )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "                       )\n",
+    "\n",
     "def on_update_widget_level0(*args):\n",
     "    level1_widget.options = d0[level0_widget.value]\n",
     "level0_widget.observe(on_update_widget_level0, 'value')\n",
@@ -186,9 +202,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('I want to know....')\n",
+    "#from ipywidgets import interactive\n",
+    "#from IPython.display import display\n",
+    "#def f(a, b):\n",
+    " #   display(a + b)\n",
+    " #   return a+b\n",
+    "\n",
+    "#d = interactive(f, a=10, b=20)\n",
+    "#d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ipywidgets import interactive, interact\n",
+    "dd = interactive(updates)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#print('I want to know....')\n",
     "l_box, c_box, r_box = VBox([level0_widget]), VBox([level1_widget]), VBox([level2_widget])\n",
-    "HBox([l_box, c_box, r_box])"
+    "display(HBox([l_box, c_box, r_box]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(dd)"
    ]
   },
   {
@@ -244,13 +295,6 @@
     "button.on_click(on_button_clicked)\n",
     "display(button)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
