--- a/skinny_vitivisor_dash.ipynb
+++ b/skinny_vitivisor_dash.ipynb
@@ -239,15 +239,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(dd)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def plot_request_mapper():\n",
     "    plot_str = ipyw.Text(\"0.5\")\n",
     "    p_d = {\"plot\": plot_str}\n",
@@ -279,21 +270,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from IPython.display import clear_output\n",
-    "def on_button_clicked(b):\n",
-    "    clear_output()\n",
-    "    display(button)\n",
-    "    irrig = str_d['irrigation'].value\n",
-    "    #print(\"evaluating {} irrigation scenario with respect to base scenario...\".format(irrig))\n",
-    "    scens = mjknowling.run_scen(irrig)\n",
-    "    p_d = plot_request_mapper()\n",
-    "    plot = p_d['plot'].value\n",
-    "    #print(\"plotting {}\".format(plot))\n",
-    "    mjknowling.plot_scen(scens, plot)\n",
-    "    \n",
-    "button = ipyw.Button(description=\"Get Some Science\")\n",
-    "button.on_click(on_button_clicked)\n",
-    "display(button)"
+    "display(dd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#from IPython.display import clear_output\n",
+    "#def on_button_clicked(b):\n",
+    "#    clear_output()\n",
+    "#    display(button)\n",
+    "#    irrig = str_d['irrigation'].value\n",
+    "#    #print(\"evaluating {} irrigation scenario with respect to base scenario...\".format(irrig))\n",
+    "#    scens = mjknowling.run_scen(irrig)\n",
+    "#    p_d = plot_request_mapper()\n",
+    "#    plot = p_d['plot'].value\n",
+    "#    #print(\"plotting {}\".format(plot))\n",
+    "#    mjknowling.plot_scen(scens, plot)\n",
+    "#    \n",
+    "#button = ipyw.Button(description=\"Get Some Science\")\n",
+    "#button.on_click(on_button_clicked)\n",
+    "#display(button)"
    ]
   },
   {
