plumbing more states and improving viz

--- a/skinny_vitivisor_dash.ipynb
+++ b/skinny_vitivisor_dash.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,24 +39,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "83e75d843dea4c3e87f6b933ec234542",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(VBox(children=(Dropdown(description='variety', options=('shiraz',), value='shiraz'),)), VBox(ch…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "variety_d = {'variety': ['shiraz']}\n",
     "variety_widget = Dropdown( options=variety_d['variety'],\n",
@@ -85,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,8 +239,14 @@
     "            p_d['plot'].value = 'harvestyield'\n",
     "        elif l1w.value == \"revenue\" and l2w.value == \"crush\":\n",
     "            p_d['plot'].value = 'harvestrevenue'\n",
-    "        elif l1w.value == \"growth\" and l2w.value == \"canopy\":\n",
-    "            p_d['plot'].value = 'laitimeseries'\n",
+    "        elif l1w.value == \"growth\":\n",
+    "            if l2w.value == \"canopy\":\n",
+    "                p_d['plot'].value = 'laitimeseries'\n",
+    "            elif l2w.value == \"fruit\":\n",
+    "                p_d['plot'].value = 'fruittimeseries'\n",
+    "        elif l1w.value == \"key dates\":\n",
+    "            if l2w.value == \"bud burst\":\n",
+    "                p_d['plot'].value = 'bbdate'\n",
     "        elif l1w.value == \"costs\" and l2w.value == \"comparison\":\n",
     "            p_d['plot'].value = 'costcontributions'\n",
     "        elif l1w.value == \"bottom line\" and l2w.value == \"gross margin\":\n",
@@ -263,7 +254,7 @@
     "        else:\n",
     "            p_d['plot'].value = 'underdev'\n",
     "    else:\n",
-    "        raise Exception(\"Please select an option from each of the drop-down menus!\")\n",
+    "        raise Exception(\"Please select an option from each of the drop-down menus\")\n",
     "    return p_d"
    ]
   },
@@ -274,12 +265,12 @@
    "outputs": [],
    "source": [
     "d0 = {'how my vine is developing' : ['key dates', 'growth', 'end of season'], \n",
-    "      'where my water is going' : ['irrigation', 'soil moisture', 'transpiration'],\n",
+    "      'where my water is going' : ['irrigation', 'infiltration', 'evaporation', 'soil moisture', 'root uptake'],\n",
     "      'what my financial position is': ['revenue', 'costs', 'bottom line']}\n",
     "d1 = {v: [] for v in [x for y in list(d0.values()) for x in y]}  # one level? at a time - to avoid multi-index hassle\n",
     "d1['irrigation'] = ['time series', 'total']\n",
     "d1['key dates'] = ['bud burst', 'first flower', 'veraison', 'harvest']\n",
-    "d1['growth'] = ['canopy', 'berry']\n",
+    "d1['growth'] = ['canopy', 'fruit']\n",
     "d1['end of season'] = ['yield', 'Brix']\n",
     "d1['revenue'] = ['crush']\n",
     "d1['costs'] = ['irrigation', 'labour', 'diesel', 'chemical', 'comparison']\n",
@@ -348,7 +339,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#print('I want to know....')\n",
+    "print('I want to know...')\n",
     "l_box, c_box, r_box = VBox([level0_widget]), VBox([level1_widget]), VBox([level2_widget])\n",
     "display(HBox([l_box, c_box, r_box]))"
    ]
